<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fssst...POIng !!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="conf_password">Confirm Password</string>
    <string name="signInHome">Log In</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="signUpHome">New Account</string>
    <string name="title_activity_start_up">StartUp</string>
    <string name="tab1">Set</string>
    <string name="tab2">Search</string>
    <string name="tab3">Search Info</string>
    <string name="title_activity_mainsoap">MainActivity</string>
    <string name="PoiName">Name your new POI</string>
    <string name="poiType">Select one of the categories below :</string>
    <string name="searchpoiType">Select one or more of the categories below :</string>
    <string name="Back">Back</string>
    <string name="InsertPoi">Insert</string>
    <string name="SearchAllPois">Search All Pois</string>
    <string name="SearchMyPois">Search My Pois</string>
    <string name="SearchOthersPois">Search Others Pois</string>
    <string name="other_option">Other</string>
    <string name="entertainment_option">Entertainment</string>
    <string name="drink_option">Drink</string>
    <string name="cinema_option">Cinema</string>
    <string name="seeing_option">Site seeing</string>
    <string name="education_option">Education</string>
    <string name="library_option">Library</string>
    <string name="university_option">University</string>
    <string name="food_option">Food</string>
    <string name="fastfood_option">Fast food Restaurant</string>
    <string name="takeaway_option">Take away Restaurant</string>
    <string name="typical_option">Typical Restaurant</string>
    <string name="refresh">Refresh</string>
	<string name="buttonview">View</string>
	
	<string name="buttonview">View</string>
 	<string name="buttondelete">Delete</string>
 	<string name="textlistV">My Verified POIS:</string>
 	<string name="textlistP">My Pending POIS:</string>
 	<string name="MoreInfo">Further Information</string>
 
    <string-array name="types">
        <item>Other</item>
        <item>Entertainment</item>
        <item>Drink</item>
        <item>Cinema</item>
        <item>Site seeing</item>
        <item>Education</item>
        <item>Library</item>
        <item>University</item>
        <item>Food</item>
        <item>Fast food Restaurant</item>
        <item>Take away Restaurant</item>
        <item>Typical Restaurant</item>
    </string-array>

    <string name="title_activity_map">Map</string>

</resources>
