<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
         
  android:background="@color/medium"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignUp" >

<Button
    android:id="@+id/buttonCansel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/buttonSignUp"
    android:layout_alignBottom="@+id/buttonSignUp"
    android:layout_alignRight="@+id/NewUsername"
    android:layout_marginRight="16dp"
    
    android:textColor="@android:color/holo_blue_light"
    android:textStyle="bold"
    android:text="@string/cancel" />

<EditText
    android:id="@+id/NewPassword"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/NewUsername"
    android:layout_below="@+id/NewUsername"
    android:layout_marginTop="28dp"
    android:ems="10"
    android:hint="@string/password"
    android:inputType="textPassword"
  android:textColor="@android:color/holo_blue_light"
    android:textStyle="bold" >

    <requestFocus />
</EditText>

<EditText
    android:id="@+id/NewPasswordConf"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/NewPassword"
    android:layout_below="@+id/NewPassword"
    android:layout_marginTop="27dp"
    android:ems="10"
    android:hint="@string/conf_password"
    android:inputType="textPassword"
android:textColor="@android:color/holo_blue_light"
    android:textStyle="bold" />

<EditText
    android:id="@+id/NewUsername"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="33dp"
    android:ems="10"
    android:hint="@string/username"
    android:inputType="textPersonName"
android:textColor="@android:color/holo_blue_light"
    android:textStyle="bold" />

<Button
    android:id="@+id/buttonSignUp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/NewPasswordConf"
    android:layout_below="@+id/NewPasswordConf"
    android:layout_marginTop="45dp"

    android:text="@string/title_activity_sign_up"
   android:textColor="@android:color/holo_blue_light"
    android:textStyle="bold" />
    
</RelativeLayout>