<?xml version="1.0" encoding="UTF-8"?>
   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
       style="@color/salmon"
       android:layout_width="fill_parent"
       android:layout_height="match_parent"
       android:background="@color/medium"
       android:focusableInTouchMode="true"
       android:orientation="vertical" >
 
   <TextView
       android:id="@+id/textlistV"
       android:layout_width="match_parent"
       android:layout_height="30dp"
       android:gravity="center_horizontal|fill_vertical"
       android:text="@string/textlistV"
       android:textColor="@android:color/holo_blue_light" />
   
   <ListView
       android:id="@+id/mylistviewV"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:background="@color/medium"
       android:cacheColorHint="@color/translucent_red"
       android:choiceMode="singleChoice"
       android:textColor="@android:color/black" >
 
       </ListView>

  

   
   <TextView
       android:id="@+id/textlistP"
       android:layout_width="match_parent"
       android:layout_height="30dp"
       android:gravity="center_horizontal|fill_vertical"
       android:text="@string/textlistP"
       android:textColor="@android:color/holo_blue_light" />

   <ListView 
        android:background="@color/medium" 
       android:id="@+id/mylistviewP"
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"
          android:cacheColorHint="@color/translucent_red"
         android:choiceMode="singleChoice" />

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
        android:orientation="vertical" >

      <Button
           android:id="@+id/buttonview"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/buttonview"
           android:textColor="@android:color/holo_blue_light" />
       
       <Button
           android:id="@+id/buttondelete"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/buttondelete"
           android:textColor="@android:color/holo_blue_light" />

  
   </LinearLayout>

</LinearLayout>